--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.5",
+    "react-native-heroicons": "^3.2.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
+    "react-native-svg": "^13.14.0",
     "react-native-web": "~0.19.6",
     "tailwindcss-react-native": "^1.7.10"
   },
