--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   "dependencies": {
     "@expo/webpack-config": "^19.0.0",
     "@heroicons/react": "^2.0.18",
+    "@react-native-firebase/app": "^18.5.0",
+    "@react-native-firebase/auth": "^18.5.0",
     "@react-navigation/native": "^6.1.8",
     "@react-navigation/native-stack": "^6.9.14",
     "expo": "~49.0.13",
     "expo-status-bar": "~1.6.0",
+    "firebase": "^10.5.0",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -22,7 +25,7 @@
     "react-native-heroicons": "^3.2.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "react-native-svg": "^13.14.0",
+    "react-native-svg": "13.9.0",
     "react-native-web": "~0.19.6",
     "tailwindcss-react-native": "^1.7.10"
   },
