--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@expo/webpack-config": "^19.0.0",
     "@heroicons/react": "^2.0.18",
+    "@react-native-masked-view/masked-view": "0.2.9",
+    "@react-native-picker/picker": "^2.6.1",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/material-bottom-tabs": "^6.2.19",
     "@react-navigation/native": "^6.1.8",
@@ -21,6 +23,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.6",
+    "react-native-dropdown-picker": "^5.4.6",
+    "react-native-gesture-handler": "~2.12.0",
     "react-native-heroicons": "^3.2.0",
     "react-native-paper": "^5.11.1",
     "react-native-safe-area-context": "4.6.3",
@@ -28,9 +32,7 @@
     "react-native-svg": "13.9.0",
     "react-native-vector-icons": "^10.0.1",
     "react-native-web": "~0.19.6",
-    "tailwindcss-react-native": "^1.7.10",
-    "react-native-gesture-handler": "~2.12.0",
-    "@react-native-masked-view/masked-view": "0.2.9"
+    "tailwindcss-react-native": "^1.7.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
