--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "18.2.0",
     "react-native": "0.72.6",
     "react-native-dropdown-picker": "^5.4.6",
+    "react-native-flash-message": "^0.4.2",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-heroicons": "^3.2.0",
     "react-native-paper": "^5.11.1",
@@ -32,7 +33,8 @@
     "react-native-svg": "13.9.0",
     "react-native-vector-icons": "^10.0.1",
     "react-native-web": "~0.19.6",
-    "tailwindcss-react-native": "^1.7.10"
+    "tailwindcss-react-native": "^1.7.10",
+    "expo-image-picker": "~14.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
