--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "react-native-svg": "13.9.0",
     "react-native-vector-icons": "^10.0.1",
     "react-native-web": "~0.19.6",
-    "tailwindcss-react-native": "^1.7.10"
+    "tailwindcss-react-native": "^1.7.10",
+    "@react-native-async-storage/async-storage": "1.18.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
